--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-Documentation for <a href="{% if site.codeurl %}{{ site.codeurl }}{% else %}{{ site.baseurl }}{% endif %}">{{ site.title }}</a>
+Documentation for <a href="{% if site.projecturl %}{{ site.projecturl }}{% else %}{{ site.baseurl }}{% endif %}">{{ site.title }}</a>
