--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,11 @@
         <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
     </head>
     <body>
+		<a href="http://github.com/decebals/pippo">
+			<img style="position: absolute; top: 0; right: 0; border: 0; z-index: 10000;"
+				src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"
+				alt="Fork me on GitHub">
+		</a>
 
         <div class="container">
             <div class=row-fluid>
